<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.AuthActivity">

    <!-- A central LinearLayout to evenly space elements -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Title -->
        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:letterSpacing="0.02"
            android:text="FITTR Login"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!-- Email Field -->
        <EditText
            android:id="@+id/auth_id_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_field"
            android:fontFamily="@font/poppins_light"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15dp"
            android:layout_marginTop="16dp" />

        <!-- Password Field -->
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/auth_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_field"
            android:fontFamily="@font/poppins_light"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textColorHint="#808080"
            android:textSize="15dp"
            android:layout_marginTop="12dp" />

        <!-- Login Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/auth_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins_bold"
            android:text="Next"
            android:textColor="@color/white"
            android:layout_marginTop="16dp" />

        <!-- Help Text -->
        <TextView
            android:id="@+id/authHelpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="Need help retrieving your credentials?"
            android:textAlignment="center"
            android:textColor="#AC84E7"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
